# bayesian-stats

./: .gitignore  LICENSE  README.md  conda-lock.yml  environment.yml  pyproject.toml  setup.cfg  setup.py
notebooks/: ANOVA.md  bayes-theorem.ipynb  capstone.md  hierarchical-modeling.md  kde_distribution.ipynb  linear-regression.md  logistic-regression.md  mcmc.ipynb  mixture-model.md  multivariate-normal.md  poisson-regression.md  prior-sensitivity-analysis.md  probability.ipynb  proportions.ipynb  pymc-MCMC.md
notebooks/bayesian-statistics-specialization/: README.md  anova.md  mm-fat-tails.md
notebooks/think-bayes/: README.md  bayes-theorem.md  ch1-probability.md  probability.ipynb  probability.md  proportions.md
src/bayesian_stats/: __init__.py  distributions.py  find_declines.py  functions.py  mcmc.py  utils.py
tests/: __init__.py  test_bayesian_stats.py  test_mcmc.py  test_utils.py
