[metadata]
name = bayesian-stats
version = attr: bayesian_stats.__version__
description = "Bayesisan statistics and modeling sandbox"
license = MIT
url = https://github.com/libertininick/bayesian-stats
author = Nick Libertini
author_email = libertini.nick@gmail.com

[options]
python_requires = >= 3.10
packages = find:
package_dir = 
    = src
install_requires =
    arviz
    matplotlib
    numpy
    numpyro
    pandas
    pymc
    python-dotenv
    scipy
tests_require = 
    pytest
    hypothesis

[options.packages.find]
where = src
exclude = tests, tests.*

[tool.pytest]
python_files = test_*.py
testpaths = tests