[metadata]
name = bayesian-stats
version = attr: bayesian_stats.__version__
description = "Bayesisan statistics and modeling sandbox"
license = MIT
url = https://github.com/libertininick/bayesian-stats
author = Nick Libertini
author_email = libertini.nick@gmail.com

[options]
python_requires = >= 3.10
packages = find:
package_dir = 
    = src
install_requires =
    arviz>=0.14.0
    matplotlib>=3.6.2
    numpy>=1.24.1
    numpyro>=0.10.1
    pandas>=1.5.2
    pymc>=5.0.1
    python-dotenv>=0.21.0
    python-graphviz>=0.20.1
    scipy>=1.10.0
tests_require = 
    pytest
    hypothesis

[options.packages.find]
where = src
exclude = tests, tests.*

[tool.pytest]
python_files = test_*.py
testpaths = tests